- Fixed bug #60570 (http wrapper leaks context resource if request fails/is   redirected).