ext/standard/http_fopen_wrapper.c
@@ -787,9 +787,6 @@ finish:
 		if (location[0] != '\0')
 			php_stream_notify_info(context, PHP_STREAM_NOTIFY_REDIRECTED, location, 0);
 
-		if (context) { /* keep the context for the next try */
-			zend_list_addref(context->rsrc_id);
-		}
 		php_stream_close(stream);
 		stream = NULL;
 
